Wed Feb 24 21:03:04 2016  Tanaka Akira  <akr@fsij.org>

	* random.c (limited_rand): Add a specialized path for the limit fits
	  in 32 bit.

Tue Feb 23 21:52:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Outputting actual titlecase
	  data (new table, with indices from other tables).
	* enc/unicode.c: Ignoring titlecase data indices for the moment.
	  (with Kimihito Matsui)

Tue Feb 23 15:21:14 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Reading casing data from
	  SpecialCasing.txt.
	  (with Kimihito Matsui)

Mon Feb 22 18:33:55 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Adding flag for title-case,
	  not yet operational.
	  (with Kimihito Matsui)

Mon Feb 22 18:17:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Fixed bug that avoided inclusion
	  of compatibility characters in upper-/lower-case mappings.
	  (with Kimihito Matsui)

Sun Feb 21 13:57:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cgi/escape/escape.c: Optimize CGI.unescape performance by C ext
	  for ASCII-compatible encodings.  [Fix GH-1250]

Sun Feb 21 13:56:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cgi/escape/escape.c: Optimize CGI.unescapeHTML performance by C
	  ext for ASCII-compatible encodings.  [Fix GH-1242]

Sat Feb 20 15:38:16 2016  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: update paths for defs/ directory

Sat Feb 20 14:44:15 2016  Lucas Buchala  <lucasbuchala@gmail.com>

	* vm_eval.c (rb_mod_module_eval): [DOC] Fix documentation
	  signature for Module#module_eval.  [Fix GH-1258]

Sat Feb 20 14:40:44 2016  Adam O'Connor  <northband@gmail.com>

	* README.md: a few grammatical changes to the main Ruby README.md.
	  [Fix GH-1259]

Sat Feb 20 13:04:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (push_pattern, push_glob): deal with read paths as UTF-8